--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
     npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot
   displayName: 'Compile Sass assets'
 
-# ✅ Run Gulp tasks using npx
+# Run Gulp tasks using npx
 - script: |
     npx gulp
   displayName: 'Run gulp tasks'
@@ -45,7 +45,6 @@ steps:
     echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
   displayName: 'Write build info'
   workingDirectory: Tailspin.SpaceGame.Web/wwwroot
-
 
 # Restore project dependencies
 - task: DotNetCoreCLI@2
@@ -90,32 +89,50 @@ steps:
     pathToSources: '$(Build.SourcesDirectory)'
     codeCoverageTool: 'Cobertura'
 
+# Check if projects are packable
+- script: |
+    echo "Checking which projects have <IsPackable> property set:"
+    findstr /s /i "<IsPackable>" *.csproj
+    echo "Checking which projects have <PackageId> property set:"
+    findstr /s /i "<PackageId>" *.csproj
+  displayName: 'Debug - Check packable projects'
+  continueOnError: true
+
+# Modified pack task with more explicit settings
 - task: DotNetCoreCLI@2
   displayName: 'Pack the project - $(buildConfiguration)'
   inputs:
     command: 'pack'
-    projects: '**/*.csproj'
-    packDirectory: '$(Build.ArtifactStagingDirectory)/packages'
-    arguments: '--no-build --configuration $(buildConfiguration)'
+    packagesToPack: '**/*.csproj'
+    nobuild: true
+    includesymbols: true
+    includesource: true
     versioningScheme: byPrereleaseNumber
     majorVersion: '1'
     minorVersion: '0'
     patchVersion: '0'
+    outputDir: '$(Build.ArtifactStagingDirectory)/packages'
+  continueOnError: false
 
-- task: NuGetCommand@2
-  displayName: 'Publish NuGet package'
-  inputs:
-    command: push
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
-    feedPublish: '$(CI-CD_Training)/Tailspin.SpaceGame.Web.Models'
-    allowPackageConflicts: true
-  condition: succeeded()
-
+# Debug - List packages before pushing
 - script: |
     echo "Listing .nupkg files in Build.ArtifactStagingDirectory:"
     dir /s /b "$(Build.ArtifactStagingDirectory)\*.nupkg"
+    echo "Listing all files in Build.ArtifactStagingDirectory:"
+    dir /s /b "$(Build.ArtifactStagingDirectory)"
   displayName: 'Debug - List .nupkg files'
   condition: always()
+
+# Try using DotNetCoreCLI for pushing packages instead of NuGetCommand
+- task: DotNetCoreCLI@2
+  displayName: 'Push NuGet packages'
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '$(CI-CD_Training)/Tailspin.SpaceGame.Web.Models'
+  condition: succeeded()
+  continueOnError: true
 
 # Publish final project build
 - task: DotNetCoreCLI@2
