--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,22 +2,15 @@ trigger:
 - '*'
 
 pool:
-  name: 'Default' # Your self-hosted agent pool name
+  name: 'Default'
 
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '6.x'
+  system.accesstoken: $(System.AccessToken) # Enable access token
 
 steps:
-# Install Node.js and npm (for self-hosted Linux agents)
-- script: |
-    curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
-    sudo apt-get install -y nodejs
-    node -v
-    npm -v
-  displayName: 'Install Node.js and npm'
-
 # Use .NET SDK 6.x
 - task: UseDotNet@2
   displayName: 'Use .NET SDK $(dotnetSdkVersion)'
@@ -25,26 +18,39 @@ steps:
     packageType: sdk
     version: '$(dotnetSdkVersion)'
 
+# Install Node.js and npm (for self-hosted Linux agents)
+- script: |
+    curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+    sudo apt-get install -y nodejs
+    node -v
+    npm -v
+  displayName: 'Install Node.js and npm'
+  continueOnError: true
+
 # Install npm packages
 - script: |
     npm ci
   displayName: 'Install npm packages'
+  continueOnError: true
 
 # Compile SASS using local node_modules
 - script: |
     npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot
   displayName: 'Compile Sass assets'
+  continueOnError: true
 
 # Run Gulp tasks using npx
 - script: |
     npx gulp
   displayName: 'Run gulp tasks'
+  continueOnError: true
 
 # Write build info to a file
 - script: |
     echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
   displayName: 'Write build info'
   workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+  continueOnError: true
 
 # Restore project dependencies
 - task: DotNetCoreCLI@2
@@ -58,63 +64,59 @@ steps:
   displayName: 'Build the project - $(buildConfiguration)'
   inputs:
     command: 'build'
-    arguments: '--no-restore --configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration)'
     projects: '**/*.csproj'
 
-# Run unit tests with coverage
+# Run unit tests
 - task: DotNetCoreCLI@2
-  displayName: 'Run unit tests with coverage'
+  displayName: 'Run unit tests'
   inputs:
     command: 'test'
-    arguments: '--no-build --configuration $(buildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=$(Build.SourcesDirectory)/TestResults/Coverage/'
-    publishTestResults: true
     projects: '**/*.Tests.csproj'
+    arguments: '--configuration $(buildConfiguration)'
 
-# Install ReportGenerator globally
-- script: |
-    dotnet tool update --global dotnet-reportgenerator-globaltool --version 5.1.26 || dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.1.26
-  displayName: 'Ensure ReportGenerator (v5.1.26) is installed'
-
-# Add ReportGenerator to PATH
-- script: |
-    reportgenerator -reports:$(Build.SourcesDirectory)/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)/CodeCoverage -reporttypes:HtmlInline_AzurePipelines
-  displayName: 'Create code coverage report'
-  env:
-    PATH: $(PATH):~/.dotnet/tools
-
-- task: PublishCodeCoverageResults@2
-  displayName: 'Publish code coverage report'
-  inputs:
-    summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
-    pathToSources: '$(Build.SourcesDirectory)'
-    codeCoverageTool: 'Cobertura'
-
+# Pack the Models project
 - task: DotNetCoreCLI@2
-  displayName: 'Pack the project - $(buildConfiguration)'
+  displayName: 'Pack the Models project'
   inputs:
     command: 'pack'
-    projects: '**/*.csproj'
-    arguments: '--no-build --configuration $(buildConfiguration)'
-    versioningScheme: byPrereleaseNumber
+    packagesToPack: '**/Tailspin.SpaceGame.Web.Models.csproj'
+    configuration: '$(buildConfiguration)'
+    packDirectory: '$(Build.ArtifactStagingDirectory)/packages'
+    versioningScheme: 'byPrereleaseNumber'
     majorVersion: '1'
     minorVersion: '0'
     patchVersion: '0'
 
+# Debug - List packages
+- script: |
+    echo "Listing all files in Build.ArtifactStagingDirectory:"
+    dir /s "$(Build.ArtifactStagingDirectory)"
+  displayName: 'Debug - List output files'
+  condition: always()
+
+# Authenticate with Azure Artifacts
+- task: NuGetAuthenticate@1
+  displayName: 'NuGet Authenticate'
+
+# Push NuGet packages
 - task: NuGetCommand@2
   displayName: 'Publish NuGet package'
   inputs:
     command: push
-    feedPublish: '$(System.TeamProject)/Tailspin.SpaceGame.Web.Models'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
+    publishVstsFeed: 'CI-CD_Training/Tailspin.SpaceGame.Web.Models'
     allowPackageConflicts: true
-  condition: succeeded()
+  env:
+    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
 
-# Publish final project build
+# Publish the web project
 - task: DotNetCoreCLI@2
-  displayName: 'Publish the project'
+  displayName: 'Publish the web project'
   inputs:
     command: 'publish'
-    projects: '**/*.csproj'
-    arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
+    projects: '**/Tailspin.SpaceGame.Web.csproj'
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
 
 # Publish as build artifact
