--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,6 @@ variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
   dotnetSdkVersion: '6.x'
-  system.accesstoken: $(System.AccessToken) # Enable access token
 
 steps:
 # Use .NET SDK 6.x
@@ -95,20 +94,18 @@ steps:
   displayName: 'Debug - List output files'
   condition: always()
 
-# Authenticate with Azure Artifacts
-- task: NuGetAuthenticate@1
-  displayName: 'NuGet Authenticate'
 
-# Push NuGet packages
+
+# OPTION 2: Use NuGetCommand with feed ID
 - task: NuGetCommand@2
-  displayName: 'Publish NuGet package'
+  displayName: 'Push NuGet packages (Option 2)'
   inputs:
     command: push
     packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
-    publishVstsFeed: 'CI-CD_Training/Tailspin.SpaceGame.Web.Models'
-    allowPackageConflicts: true
-  env:
-    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+    publishVstsFeed: 'c9c57c21-3325-7f52-abbd-f881c6062388'
+  continueOnError: true
+  enabled: false
+
 
 # Publish the web project
 - task: DotNetCoreCLI@2
