--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,7 +104,7 @@ steps:
     packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
     publishVstsFeed: 'c9c57c21-3325-7f52-abbd-f881c6062388'
   continueOnError: true
-  enabled: false
+  enabled: true
 
 
 # Publish the web project
