--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,15 +96,38 @@ steps:
 
 
 
-# OPTION 2: Use NuGetCommand with feed ID
+# Option 1: Just the feed name
 - task: NuGetCommand@2
-  displayName: 'Push NuGet packages (Option 2)'
+  displayName: 'Push NuGet packages - Option 1'
   inputs:
     command: push
     packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
+    nuGetFeedType: 'internal'
     publishVstsFeed: 'Tailspin.SpaceGame.Web.Models'
   continueOnError: true
-  enabled: true
+
+# Option 2: Project/feed format
+- task: NuGetCommand@2
+  displayName: 'Push NuGet packages - Option 2'
+  inputs:
+    command: push
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: 'CI-CD_Training/Tailspin.SpaceGame.Web.Models'
+  continueOnError: true
+  enabled: false  # Enable this if Option 1 fails
+
+# Option 3: Use DotNetCoreCLI task
+- task: DotNetCoreCLI@2
+  displayName: 'Push NuGet packages - Option 3'
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/packages/**/*.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: 'Tailspin.SpaceGame.Web.Models'
+  continueOnError: true
+  enabled: false  # Enable this if Options 1 and 2 fail
+
 
 
 # Publish the web project
