--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -116,7 +116,7 @@ steps:
     nuGetFeedType: 'internal'
     publishVstsFeed: 'CI-CD_Training/Tailspin.SpaceGame.Web.Models'
   continueOnError: true
-  enabled: false # Enable this if Option 1 fails
+  enabled: true # Enable this if Option 1 fails
 
 # Option 3: Use DotNetCoreCLI task
 - task: DotNetCoreCLI@2
@@ -127,7 +127,7 @@ steps:
     nuGetFeedType: 'internal'
     publishVstsFeed: 'Tailspin.SpaceGame.Web.Models'
   continueOnError: true
-  enabled: true  # Enable this if Options 1 and 2 fail
+  enabled: false  # Enable this if Options 1 and 2 fail
 
 
 
