--- a/Tailspin.SpaceGame.Web.Models/Tailspin.SpaceGame.Web.Models.csproj
+++ b/Tailspin.SpaceGame.Web.Models/Tailspin.SpaceGame.Web.Models.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.1.0" />
+  </ItemGroup>
+
 </Project>
